--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="email_text_field">Почта</string>
     <string name="password_text_field">Пароль</string>
 
+    <string name="login">Войти</string>
+    <string name="registration">Регистрация</string>
     <string name="hide_password_description">Скрыть пароль</string>
-    <string name="show_password_description">Скрыть пароль</string>
+    <string name="show_password_description">Показать пароль</string>
 </resources>
