--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Servarium</string>
+
+    <string name="app_logo_description">Иконка приложения</string>
+
+    <string name="email_text_field">Почта</string>
+    <string name="password_text_field">Пароль</string>
+    <string name="repeat_password_text_field">Повторите пароль</string>
+
+    <string name="login">Войти</string>
+    <string name="registration">Регистрация</string>
+    <string name="register">Зарегистрироваться</string>
+    <string name="back">Назад</string>
+
+    <string name="hide_password_description">Скрыть пароль</string>
+    <string name="show_password_description">Показать пароль</string>
 </resources>
